scrollbar fixes

--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,13 @@
   ::-webkit-scrollbar-thumb:hover {
     background: #777; 
   }
- 
-  .no-horizontal-scroll {
-    /* overflow-x: hidden !important; */
-    overflow-x: hidden ;
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari */
+  }
+  
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* Hide scrollbar for IE/Edge */
+    scrollbar-width: none; /* Hide scrollbar for Firefox */
   }
 
   
